# connectionist

./: .gitignore  .readthedocs.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post_create.sh  requirements.base.txt  requirements.txt
.github/workflows/: ci.yml  publish-to-pypi.yml
connectionist/: __about__.py  __init__.py  data.py  layers.py  losses.py  models.py  surgery.py
connectionist/damage/: shrink_layer.py  utils.py
docs/: index.md
docs/data/: ToyOP.md
docs/layers/: HNSCell.md  HNSLayer.md  HNSSpoke.md  MultiInputTimeAveraging.md  PMSPCell.md  PMSPLayer.md  Spoke.md  TimeAveragedDense.md  TimeAveragedRNN.md  TimeAveragedRNNCell.md  ZeroOutDense.md  overview.md
docs/losses/: MaskedBinaryCrossEntropy.md
docs/models/: HubAndSpokes.md  PMSP.md  overview.md
docs/surgery/: Surgeon.md  SurgeryPlan.md  copy_transplant.md  make_recipient.md
examples/: 1_simple_rnn_with_time_averaging.ipynb  2_MultiInputTimeAveraging.ipynb
layers/HNSCell/: index.html
layers/HNSLayer/: index.html
layers/HNSSpoke/: index.html
layers/MultiInputTimeAveraging/: index.html
layers/PMSPCell/: index.html
layers/PMSPLayer/: index.html
layers/TimeAveragedDense/: index.html
layers/TimeAveragedRNN/: index.html
layers/TimeAveragedRNNCell/: index.html
layers/ZeroOutDense/: index.html
layers/overview/: index.html
scripts/: generate_docs.py  release.sh
search/: search_index.json
tests/: conftest.py  test_model_hns.py  test_model_pmsp.py
(+8 files in other folders)
