[project]
name = "connectionist"
description = "Tools for classical connectionist models of reading with TensorFlow"
readme = "README.md"
dynamic = ["version"]
authors = [
    { name = "Jason Lo", email = "lcmjlo@gmail.com" }
]
dependencies = ["tensorflow==2.*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "connectionist/__about__.py"