[project]
name = "connectionist"
description = "Tools for classical connectionist models of reading with TensorFlow"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dynamic = ["version"]
authors = [
    { name = "Jason Lo", email = "lcmjlo@gmail.com" }
]
dependencies = ["tensorflow==2.*"]

[project.urls]
Homepage = "https://github.com/jasonlo/connectionist"
Documentation = "https://jasonlo.github.io/connectionist/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "connectionist/__about__.py"